[metadata]
name = dotpipe
version = 0.0.1
description = dotpipe: generate node and edge graph from pipe input
url = https://github.com/umaumax/dotpipe
author = umaumax
author_email =
license = MIT
long_description = file: README.md

[options]
zip_safe = False
install_requires =
  networkx
  pygraphviz
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = tests
